# msc

./: Cargo.toml  README.md  config.json  index.html  msc.js  msc_bg.wasm
assets/: sw.js
assets/icons/: icons.psd
core/: Cargo.toml
core/benches/: track_picture_map.rs
core/examples/: playback.rs  sandbox.rs
core/src/: album.rs  artcache.rs  audio_analyzer.rs  backend.rs  collection.rs  config.rs  image_processing.rs  lib.rs  library.rs  metadata.rs  player.rs  playlist.rs  queue.rs  track.rs
core/src/db/: albums.rs  mod.rs  playlists.rs  schema.rs  tracks.rs
core/src/media/: art_cache.rs  image_processing.rs  mod.rs
gui/: Cargo.toml
gui/src/: app.rs  art_cache.rs  config.rs  formatters.rs  image_processing.rs  layout.rs  main.rs  media_controls.rs  pane.rs  pane_view.rs  styles.rs  window_handle.rs
gui/src/components/: artwork.rs  bottom_bar.rs  collections.rs  context_menu.rs  controls.rs  current_track.rs  empty.rs  library.rs  mod.rs  player_controls.rs  preferences.rs  queue.rs  spectrum.rs  timeline.rs  track_info.rs  vu_meters.rs
gui/src/elements/: artwork.rs  empty.rs  library.rs  player_controls.rs  queue.rs  timeline.rs
gui/src/panes/: artwork.rs  collections.rs  controls.rs  empty.rs  library.rs  mod.rs  queue.rs  settings.rs  spectrum.rs  timeline.rs  track_info.rs  vu_meters.rs
gui/src/widgets/: artwork_image.rs  canvas_button.rs  hover_slider.rs  link_button.rs  menu.rs  menu_button.rs  mod.rs  sharp_button.rs  square_button.rs  theme_picker.rs
src/: app.rs  constants.rs  lib.rs  main.rs  msc.rs  util.rs
src/audio/: mod.rs  output.rs  resampler.rs  track.rs
src/backend/: cfg.rs  config.rs  image.rs  image_display.rs  mod.rs  playlist.rs  queue.rs  resize.rs  track.rs  ui.rs  youtube.rs
src/backend/image/: image_loader.rs  mod.rs  serial_image.rs
src/components/: audio_column.rs  audio_controls.rs  cover_view.rs  library_view.rs  loading_view.rs  main_area.rs  main_panel.rs  mod.rs  play_panel.rs  playlist_view.rs  playlists_view.rs  settings_view.rs  shared.rs  title_bar.rs
src/core/: Playlist.rs  async_image.rs  helps.rs  image_display.rs  mod.rs  playlist.rs  queue.rs  resize.rs  state.rs  structs.rs  track.rs
src/widgets/: button.rs  color_slider.rs  filtered_image.rs  link_label.rs  mod.rs  styled_button.rs
tui/: Cargo.toml
tui/src/: app.rs  main.rs
