[package]
name = "msc"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
log = { version = "0.4", features = ["release_max_level_info"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
arrayvec = "0.7.1"
cpal = "0.13.3"
rb = "0.3.2"
rubato = "0.12.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
