[package]
name = "msc"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
kira = "0.9.5"
lofty = "0.21.1"
image = "0.25.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rayon = "1.10.0"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
