[package]
name = "msc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
kira = "0.11.0"
image = "0.25.9"
lofty = "0.22.4"
blake3 = { version = "1.8.2", features = ["serde", "mmap"] }
dashmap = "6.1.0"
rayon = "1.11.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
directories = "6.0.0"
rustfft = "6.4.1"
crossbeam = "0.8.4"
rusqlite = { version = "0.38.0", features = ["bundled", "blob"] }
thiserror = "2.0.17"
